using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimationStrings {
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeling = "isOnCeling";
    internal static string attackTrigger = "attack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string isKnightHit = "isKnightHit";
    internal static string isAttack = "isAttack"; 
    internal static string isFire = "isFire";
    internal static string isAirFire = "isAirFire";
    internal static string isDeath = "isDeath";
    internal static string isClimb = "isClimb";
}
